--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -5,6 +5,6 @@ log4j.rootLogger = INFO, stdout
 log4j.appender.stdout = org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.target = System.out
 log4j.appender.stdout.layout = org.apache.log4j.PatternLayout
-log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %-5p %c{10} - %m%n
+log4j.appender.stdout.layout.ConversionPattern = %d{yyyy-MM-dd HH:mm:ss} %-5p - %m%n
 
 log4j.logger.org.reflections.Reflections = OFF
