--- a/pom.xml
+++ b/pom.xml
@@ -5,8 +5,8 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>lu.uni.serval</groupId>
-    <artifactId>rf-test-generator</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <artifactId>ukwikora</artifactId>
+    <version>0.0.1</version>
 
     <properties>
         <maven.compiler.source>1.8</maven.compiler.source>
