--- a/pom.xml
+++ b/pom.xml
@@ -102,6 +102,12 @@
             <version>1.0.1</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.rwemalika.gitlab-loader</groupId>
+            <artifactId>gitlab-loader</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
     </dependencies>
 
 </project>
