--- a/pom.xml
+++ b/pom.xml
@@ -108,6 +108,12 @@
             <version>1.0-SNAPSHOT</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.freemarker</groupId>
+            <artifactId>freemarker</artifactId>
+            <version>2.3.20</version>
+        </dependency>
+
     </dependencies>
 
 </project>
