--- a/pom.xml
+++ b/pom.xml
@@ -126,6 +126,12 @@
             <version>2.3.20</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.tika</groupId>
+            <artifactId>tika-parsers</artifactId>
+            <version>1.20</version>
+        </dependency>
+
     </dependencies>
 
 </project>
