--- a/pom.xml
+++ b/pom.xml
@@ -4,8 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>lu.uni.serval</groupId>
-    <artifactId>ukwikora</artifactId>
+    <groupId>org.ukwikora</groupId>
+    <artifactId>core</artifactId>
     <version>0.0.1</version>
 
     <properties>
@@ -126,18 +126,6 @@
             <groupId>net.harawata</groupId>
             <artifactId>appdirs</artifactId>
             <version>1.0.1</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.rwemalika.gitlab-loader</groupId>
-            <artifactId>gitlab-loader</artifactId>
-            <version>1.0-SNAPSHOT</version>
-        </dependency>
-
-        <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>2.3.20</version>
         </dependency>
 
         <dependency>
