--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <groupId>org.ukwikora</groupId>
-    <artifactId>core</artifactId>
+    <artifactId>ukwikora-core</artifactId>
     <version>0.0.1</version>
 
     <properties>
