--- a/pom.xml
+++ b/pom.xml
@@ -110,6 +110,11 @@
             <artifactId>tika-parsers</artifactId>
             <version>1.20</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.dataformat</groupId>
+            <artifactId>jackson-dataformat-xml</artifactId>
+            <version>2.9.4</version>
+        </dependency>
 
     </dependencies>
 
