--- a/pom.xml
+++ b/pom.xml
@@ -109,12 +109,16 @@
             <version>1.0.1</version>
         </dependency>
 
-        <!--- Used to help parsing files with strange encodings -->
         <dependency>
-            <groupId>org.apache.tika</groupId>
-            <artifactId>tika-parsers</artifactId>
-            <version>1.23</version>
+            <groupId>org.apache.opennlp</groupId>
+            <artifactId>opennlp-tools</artifactId>
+            <version>1.9.2</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>4.1.1</version>
         </dependency>
     </dependencies>
-
 </project>
