[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>tech.ikora</groupId>
     <artifactId>ikora-core</artifactId>
-    <version>0.0.1</version>
+    <version>0.0.2-SNAPSHOT</version>
 
     <name>Ikora Core: Robot Framework Engine</name>
     <description>
@@ -16,7 +16,7 @@
         <connection>scm:git:git://github.com/kabinja/ikora-core.git</connection>
         <developerConnection>scm:git:git@github.com:kabinja/kabinja.git</developerConnection>
         <url>https://github.com/kabinja/ikora-core</url>
-        <tag>RC-0.0.1</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
