--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>tech.ikora</groupId>
     <artifactId>ikora-core</artifactId>
-    <version>0.1.2</version>
+    <version>0.1.2-SNAPSHOT</version>
 
     <name>Ikora Core: Robot Framework Engine</name>
     <url>https://github.com/kabinja/ikora-core</url>
