--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,12 +1,13 @@
-name: coverage
+name: build
 
 on:
   push:
     branches: [ master ]
 
 jobs:
-  build:
+  compile:
     runs-on: ubuntu-latest
+    name: Compile Java
 
     steps:
       - uses: actions/checkout@v2
@@ -16,7 +17,24 @@ jobs:
         with:
           java-version: 1.8
 
-      - name: Build with Maven
+      - name: Compile code
+        run: mvn compile
+
+  test:
+    runs-on: ubuntu-latest
+    name: Running tests
+
+    needs: compile
+
+    steps:
+      - uses: actions/checkout@v2
+
+      - name: Set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Run tests with Maven
         run: mvn -B test
 
       - name: Generate JaCoCo Badge
