--- a/pom.xml
+++ b/pom.xml
@@ -7,7 +7,7 @@
     <version>0.1.1-SNAPSHOT</version>
 
     <name>Ikora Core: Robot Framework Engine</name>
-    <url>https://github.com/kabinja/ikora-core</url>
+    <url>https://github.com/UL-SnT-Serval/ikora-core</url>
 
     <description>
         In its current version this engine allows to parse simple Robot Framework projects but is still missing
@@ -15,9 +15,9 @@
     </description>
 
     <scm>
-        <connection>scm:git:git://github.com/kabinja/ikora-core.git</connection>
+        <connection>scm:git:git://github.com/UL-SnT-Serval/ikora-core.git</connection>
         <developerConnection>scm:git:git@github.com:kabinja/kabinja.git</developerConnection>
-        <url>https://github.com/kabinja/ikora-core</url>
+        <url>https://github.com/UL-SnT-Serval/ikora-core</url>
         <tag>HEAD</tag>
     </scm>
 
