--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,12 +56,13 @@ jobs:
             git push
           fi
 
-  name: sonar
+  build:
     runs-on: ubuntu-latest
+    name: Sonar analysis
+
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
+
       - name: Set up JDK 8
         uses: actions/setup-java@v1
         with:
@@ -75,9 +76,9 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+        path: ~/.m2
+        key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
+        restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
