attempt at adding sonarcloud analysis

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -56,9 +56,11 @@ jobs:
             git push
           fi
 
-  build:
+  sonarcloud:
     runs-on: ubuntu-latest
     name: Sonar analysis
+
+    needs: test
 
     steps:
       - uses: actions/checkout@v2
@@ -76,7 +78,7 @@ jobs:
       - name: Cache Maven packages
         uses: actions/cache@v1
         with:
-        path: ~/.m2
+          path: ~/.m2
         key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
         restore-keys: ${{ runner.os }}-m2
       - name: Build and analyze
