--- a/pom.xml
+++ b/pom.xml
@@ -39,6 +39,9 @@
 
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <sonar.projectKey>ikora-core</sonar.projectKey>
+        <sonar.organization>deploy-serval-snt</sonar.organization>
+        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
     </properties>
 
     <build>
