--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,26 +5,9 @@ on:
     branches: [ master ]
 
 jobs:
-  compile:
-    runs-on: ubuntu-latest
-    name: Compile Java
-
-    steps:
-      - uses: actions/checkout@v2
-
-      - name: Set up JDK 1.8
-        uses: actions/setup-java@v1
-        with:
-          java-version: 1.8
-
-      - name: Compile code
-        run: mvn compile
-
   test:
     runs-on: ubuntu-latest
     name: Running tests
-
-    needs: compile
 
     steps:
       - uses: actions/checkout@v2
@@ -60,8 +43,6 @@ jobs:
     runs-on: ubuntu-latest
     name: Sonar analysis
 
-    needs: test
-
     steps:
       - uses: actions/checkout@v2
 
@@ -84,4 +65,5 @@ jobs:
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: mvn -B verify org.sonarsource.scanner.maven:sonar-maven-plugin:sonar
