--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -5,9 +5,32 @@ on:
     branches: [ master ]
 
 jobs:
+  cache:
+    runs-on: ubuntu-latest
+    name: Cache dependencies
+
+    steps:
+      - name: Cache local Maven repository
+        id: cache-m2
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+
+      - name: Set up JDK 1.8
+        if: steps.cache-m2.outputs.cache-hit != 'true'
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+
+      - name: Run tests with Maven
+        if: steps.cache-m2.outputs.cache-hit != 'true'
+        run: mvn -B dependency:go-offline
+
   coverage:
     runs-on: ubuntu-latest
     name: Jacoco analysis (Java 8)
+    needs: [ cache ]
 
     steps:
       - uses: actions/checkout@v2
@@ -16,6 +39,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.8
+
+      - name: Load Cached m2
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
 
       - name: Run tests with Maven
         run: mvn -B test
@@ -42,6 +71,7 @@ jobs:
   sonarcloud:
     runs-on: ubuntu-latest
     name: Sonar analysis (Java 11)
+    needs: [ cache ]
 
     steps:
       - uses: actions/checkout@v2
@@ -50,18 +80,20 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 11
+
+      - name: Load Cached m2
+        uses: actions/cache@v2
+        with:
+          path: ~/.m2/repository
+          key: ${{ runner.os }}-maven-${{ hashFiles('**/pom.xml') }}
+
       - name: Cache SonarCloud packages
         uses: actions/cache@v1
         with:
           path: ~/.sonar/cache
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
-      - name: Cache Maven packages
-        uses: actions/cache@v1
-        with:
-          path: ~/.m2
-          key: ${{ runner.os }}-m2-${{ hashFiles('**/pom.xml') }}
-          restore-keys: ${{ runner.os }}-m2
+
       - name: Build and analyze
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
