checkout before trying to get dependencies in the github actions

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,6 +10,8 @@ jobs:
     name: Cache dependencies
 
     steps:
+      - uses: actions/checkout@v2
+
       - name: Cache local Maven repository
         id: cache-m2
         uses: actions/cache@v2
