[maven-release-plugin] prepare for next development iteration

--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>lu.uni.serval</groupId>
     <artifactId>ikora-core</artifactId>
-    <version>0.1.3</version>
+    <version>0.1.4-SNAPSHOT</version>
 
     <name>Ikora Core: Robot Framework Engine</name>
     <url>https://github.com/UL-SnT-Serval/ikora-core</url>
@@ -18,7 +18,7 @@
         <connection>scm:git:git://github.com/UL-SnT-Serval/ikora-core.git</connection>
         <developerConnection>scm:git:git@github.com:kabinja/kabinja.git</developerConnection>
         <url>https://github.com/UL-SnT-Serval/ikora-core</url>
-        <tag>ikora-core-0.1.3</tag>
+        <tag>HEAD</tag>
     </scm>
 
     <licenses>
