--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>lu.uni.serval</groupId>
     <artifactId>ikora-core</artifactId>
-    <version>0.1.13</version>
+    <version>0.1.14-SNAPSHOT</version>
 
     <name>Ikora Core: Robot Framework Engine</name>
     <url>https://github.com/UL-SnT-Serval/ikora-core</url>
